# librustzcash

./: Cargo.toml
bellman/: Cargo.toml
bellman/src/: domain.rs  lib.rs  multiexp.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
bellman/src/groth16/tests/: dummy_engine.rs  mod.rs
bellman/tests/: mimc.rs
bls12_381/src/: fp.rs
ff/: Cargo.toml
ff/ff_derive/src/: lib.rs
ff/src/: lib.rs
group/: Cargo.toml
group/src/: lib.rs  wnaf.rs
group/src/tests/: mod.rs
jubjub/: Cargo.toml
jubjub/src/: fq.rs  fr.rs  lib.rs
jubjub/tests/: fq_blackbox.rs  fr_blackbox.rs
librustzcash/: Cargo.toml  build.rs  cbindgen.toml
librustzcash/include/: .gitignore  librustzcash.h
librustzcash/src/: rustzcash.rs
librustzcash/src/tests/: key_agreement.rs  key_components.rs
pairing/: Cargo.toml
pairing/src/: lib.rs
pairing/src/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
pairing/src/bls12_381/tests/: mod.rs
pairing/src/tests/: engine.rs  field.rs
pczt/: .gitignore  Cargo.toml  build.rs
pczt/proto/: pczt.proto
pczt/src/: lib.rs
pczt/src/proto/: mod.rs
sapling-crypto/: Cargo.toml
sapling-crypto/src/: lib.rs  pedersen_hash.rs  redjubjub.rs
sapling-crypto/src/circuit/: ecc.rs  lookup.rs  multipack.rs  num.rs  uint32.rs
sapling-crypto/src/circuit/sapling/: mod.rs
sapling-crypto/src/circuit/test/: mod.rs
sapling-crypto/src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
sapling-crypto/src/primitives/: mod.rs
zcash_client_backend/: Cargo.toml  build.rs
zcash_client_backend/examples/: balancer.rs  rpcsync.rs
zcash_client_backend/src/: address.rs  api.rs  constants.rs  decrypt.rs  encoding.rs  jsonrpc.rs  lib.rs  note_encryption.rs  prover.rs  sqlite.rs  transaction.rs  wallet.rs  welding_rig.rs
zcash_client_backend/src/constants/: mainnet.rs
zcash_client_backend/src/proto/: mod.rs
zcash_client_sqlite/: Cargo.toml
zcash_client_sqlite/src/: address.rs  chain.rs  init.rs  lib.rs  scan.rs  transact.rs
zcash_extensions_api/src/: transparent.rs
zcash_primitives/: Cargo.toml
zcash_primitives/benches/: merkle_tree.rs.foo  pedersen_hash.rs
zcash_primitives/src/: block.rs  group_hash.rs  keys.rs  legacy.rs  lib.rs  memo.rs  merkle_tree.rs  note_encryption.rs  pedersen_hash.rs  primitives.rs  prover.rs  redjubjub.rs  sapling.rs  serialize.rs  util.rs  zip32.rs
zcash_primitives/src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
zcash_primitives/src/memo/: builder.rs  structured.rs
zcash_primitives/src/transaction/: builder.rs  components.rs  mod.rs  sighash.rs  tests.rs
zcash_proofs/: Cargo.toml
zcash_proofs/examples/: bench.rs  gen_uda_params.rs
zcash_proofs/src/: lib.rs  prover.rs  zip304.rs
zcash_proofs/src/circuit/: ecc.rs  multieq.rs  num.rs  pedersen_hash.rs  sapling.rs
zcash_proofs/src/circuit/sapling/: mod.rs
zcash_proofs/src/circuit/sprout/: mod.rs
zcash_proofs/src/sapling/: mod.rs  prover.rs  verifier.rs
zcash_wallet/: Cargo.toml
zcash_wallet/src/: lib.rs
zcash_wallet/src/transaction/: builder.rs  mod.rs  note.rs
zip32/src/: lib.rs
