[package]
name = "group"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/group/"
homepage = "https://github.com/ebfull/group"
repository = "https://github.com/ebfull/group"
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1", default-features = false }
ff = { path = "../ff" }
rand = { version = "0.4", default-features = false }
subtle = { version = "2.1", default-features = false }
