[package]
name = "pczt"
version = "0.0.1"
authors = ["Jack Grigg <jack@z.cash>"]
edition = "2018"

[dependencies]
base64 = "0.10"
bellman = { path = "../bellman" }
failure = "0.1"
ff = { path = "../ff" }
hex = "0.3"
pairing = { path = "../pairing" }
pirate = "1.0"
protobuf = "2"
rand = "0.4"
sapling-crypto = { path = "../sapling-crypto" }
zcash_client_backend = { path = "../zcash_client_backend" }
zcash_primitives = { path = "../zcash_primitives" }
zcash_proofs = { path = "../zcash_proofs" }
zip32 = { path = "../zip32" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[build-dependencies]
protobuf-codegen-pure = "2"
