[package]
name = "zcash_client_backend"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
edition = "2018"

[dependencies]
bech32 = "0.6"
bellman = { path = "../bellman" }
ff = { path = "../ff" }
hex = "0.3"
pairing = { path = "../pairing" }
protobuf = "2"
rand = "0.4"
sapling-crypto = { path = "../sapling-crypto" }
zcash_primitives = { path = "../zcash_primitives" }
zcash_proofs = { path = "../zcash_proofs" }
zip32 = { path = "../zip32" }

[build-dependencies]
protobuf-codegen-pure = "2"
