[package]
name = "zcash_client_backend"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
edition = "2018"

[dependencies]
bech32 = "0.6"
bs58 = { version = "0.2", features = ["check"] }
ff = { path = "../ff" }
hex = "0.3"
pairing = { path = "../pairing" }
protobuf = "2"
sapling-crypto = { path = "../sapling-crypto" }
zcash_primitives = { path = "../zcash_primitives" }

[build-dependencies]
protobuf-codegen-pure = "2"

[dev-dependencies]
rand = "0.6"
