[package]
name = "zcash_proofs"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Sean Bowe <sean@z.cash>",
]

[dependencies]
bellman = { path = "../bellman" }
byteorder = "1"
directories = "1"
ff = { path = "../ff" }
pairing = { path = "../pairing" }
rand = "0.4"
zcash_primitives = { path = "../zcash_primitives" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[dev-dependencies]
hex-literal = "0.1"
rust-crypto = "0.2"
